[project]
name = "llm-rag-toolkit"
version = "0.1.0"
description = "A project that uses retrieval-augmented generation (RAG) to create a conversational chatbot. It indexes and chunks HTML and PDF lecture notes, allowing users to ask questions and get answers grounded in the course material."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain[google-genai]>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-openai>=0.3.32",
    "langchain-text-splitters>=0.3.11",
    "langgraph>=0.6.6",
    "beautifulsoup4>=4.13.5",
    "faiss-cpu>=1.12.0",
    "lxml>=6.0.1",
    "langchain-ollama>=0.3.7",
]
